Competency Enhancement  in the CbExtUser Profile service.
1.  FIlter was returning 0 rows fixed it.
2. Competency changed to v6